@@ -5,6 +5,9 @@
 	  try/catch block so we catch any exceptions generated by Rcpp::as
 	  or other functions and forward it along to an R-language stop()
 	  error instead of terminating our R instance.
+	* src/mutators.cpp (rprotobuf): Add more helpful error message
+	  specifying which element of a list is of the wrong type, and what
+	  the expected type is, when setting a list of messages.
 	* inst/unitTests/runit.messages.R (test.message): Add unit tests
 	  for our handling of setting repeated message fields.
 	* src/wrapper_Message.cpp: Add const qualifier to
